<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:background="@color/colorBackground"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.joans.timetracker.MainActivity">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createbutton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="52dp"
        android:background="@color/colorPrimary"
        android:text="@string/start" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/projectbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/project"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/taskbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/tasks"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/createbutton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="27dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/boton_para_crear_una_tarea"
        app:srcCompat="@mipmap/createbutton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/create_a_n_new_action"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="visible" />

</RelativeLayout>
